fix(list-steps): Align the number

--- a/src/_sass/components/_list-steps.scss
+++ b/src/_sass/components/_list-steps.scss
@@ -12,8 +12,9 @@
     font-size: 16px;
     font-weight: 500;
     color: color(white);
-    display: block;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     top: 0;
     left: 0;
